added stylings and linked with mongoDB

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://rishi:rishi@cinema.gc2pmix.mongodb.net/movie_app?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://rishi:rishi@cinema.gc2pmix.mongodb.net/movie_app?retryWrites=true&w=majority&ssl=true"
 JWT_SECRET="mySuperSecretJWTkey123!"
 
 
